[gd_scene load_steps=16 format=3 uid="uid://blcbbps2v7mab"]

[ext_resource type="Script" path="res://Code/Scripts/main_menu.gd" id="1_cg3m7"]
[ext_resource type="Shader" path="res://Code/Shaders/background.gdshader" id="1_opprs"]
[ext_resource type="Script" path="res://Code/Scripts/leave_game_script.gd" id="2_gp3cy"]
[ext_resource type="Texture2D" uid="uid://3fhjqo2ic8yt" path="res://Rescources/2d/play-button.png" id="3_l17b2"]
[ext_resource type="Texture2D" uid="uid://cdqt27dnovwt7" path="res://Rescources/2d/play-button-pressed.png" id="4_t1chk"]
[ext_resource type="Texture2D" uid="uid://11mbnb1c0k2q" path="res://Rescources/2d/play-button-fucus.png" id="5_qf5vr"]
[ext_resource type="Texture2D" uid="uid://cuk68o2kqr0j7" path="res://Rescources/2d/options-button.png" id="6_uj4rp"]
[ext_resource type="Texture2D" uid="uid://crfyumhbs60wp" path="res://Rescources/2d/leaderboard-button.png" id="7_hdijh"]
[ext_resource type="Texture2D" uid="uid://dvw0f74ecfxxw" path="res://Rescources/2d/options-button-pressed.png" id="7_iw05l"]
[ext_resource type="Texture2D" uid="uid://cmsdh5trn0n2i" path="res://Rescources/2d/leaderboard-button-pressed.png" id="8_u7dwj"]
[ext_resource type="Texture2D" uid="uid://dsrkpd0arj5fw" path="res://Rescources/2d/quit-button.png" id="8_vxlgh"]
[ext_resource type="Texture2D" uid="uid://f7l5eu4dbave" path="res://Rescources/2d/quit-button-pressed.png" id="9_kc1n4"]
[ext_resource type="Texture2D" uid="uid://cs1cwk87qxnf3" path="res://Rescources/2d/title.png" id="10_lbdb5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nfa6p"]
shader = ExtResource("1_opprs")
shader_parameter/polar_coordinates = false
shader_parameter/polar_center = Vector2(0.5, 0.5)
shader_parameter/polar_zoom = 1.0
shader_parameter/polar_repeat = 1.0
shader_parameter/spin_rotation = null
shader_parameter/spin_speed = 5.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.31, 0.356, 1, 1)
shader_parameter/colour_2 = Color(1, 0.11, 0.124833, 1)
shader_parameter/colour_3 = Color(0, 0, 0, 1)
shader_parameter/contrast = 2.0
shader_parameter/spin_amount = 0.36
shader_parameter/pixel_filter = 500.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dkv1"]
bg_color = Color(0.18359, 0.18359, 0.18359, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="MainMenu" type="Control" node_paths=PackedStringArray("playButton", "leaderboardButton", "optionsButton", "quitButton", "mainMenu", "optionsMenu", "volumeSlider") groups=["pauseMenu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cg3m7")
playButton = NodePath("Main/PlayButton")
leaderboardButton = NodePath("Main/LeaderboardButton")
optionsButton = NodePath("Main/OptionsButton")
quitButton = NodePath("Main/QuitButton")
mainMenu = NodePath("Main")
optionsMenu = NodePath("Options")
volumeSlider = NodePath("Options/Panel/HSlider")

[node name="LeaveGameScript" type="Node" parent="."]
script = ExtResource("2_gp3cy")

[node name="background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_nfa6p")
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Main" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 80.0
offset_top = 170.0
offset_right = 368.0
offset_bottom = 266.0
texture_normal = ExtResource("3_l17b2")
texture_pressed = ExtResource("4_t1chk")
texture_focused = ExtResource("5_qf5vr")

[node name="LeaderboardButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 80.0
offset_top = 270.0
offset_right = 368.0
offset_bottom = 366.0
texture_normal = ExtResource("7_hdijh")
texture_pressed = ExtResource("8_u7dwj")
texture_focused = ExtResource("5_qf5vr")

[node name="OptionsButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 80.0
offset_top = 370.0
offset_right = 368.0
offset_bottom = 466.0
texture_normal = ExtResource("6_uj4rp")
texture_pressed = ExtResource("7_iw05l")
texture_focused = ExtResource("5_qf5vr")

[node name="QuitButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 80.0
offset_top = 470.0
offset_right = 368.0
offset_bottom = 566.0
texture_normal = ExtResource("8_vxlgh")
texture_pressed = ExtResource("9_kc1n4")
texture_focused = ExtResource("5_qf5vr")

[node name="Options" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Options"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.454902)

[node name="Panel" type="Panel" parent="Options"]
layout_mode = 0
offset_left = 376.0
offset_top = 260.0
offset_right = 776.0
offset_bottom = 460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5dkv1")

[node name="HSlider" type="HSlider" parent="Options/Panel"]
layout_mode = 0
offset_left = 44.0
offset_top = 45.0
offset_right = 332.0
offset_bottom = 65.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="TextureButton" type="TextureButton" parent="Options/Panel"]
layout_mode = 0
offset_left = 44.0
offset_top = 100.0
offset_right = 332.0
offset_bottom = 196.0
texture_normal = ExtResource("8_vxlgh")
texture_pressed = ExtResource("9_kc1n4")
texture_focused = ExtResource("5_qf5vr")

[node name="Label" type="Label" parent="Options/Panel"]
layout_mode = 0
offset_left = 141.0
offset_top = 13.0
offset_right = 259.0
offset_bottom = 36.0
text = "Master Volume"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577, 117)
scale = Vector2(1.59, 1.59)
texture = ExtResource("10_lbdb5")

[connection signal="button_up" from="Main/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="Main/LeaderboardButton" to="." method="_on_leaderboard_button_button_up"]
[connection signal="button_up" from="Main/OptionsButton" to="." method="_on_options_button_button_up"]
[connection signal="button_up" from="Main/QuitButton" to="." method="_on_quit_button_button_up"]
[connection signal="button_up" from="Options/Panel/TextureButton" to="." method="_on_texture_button_button_up"]
